Parts1 and Parts2 are complete.

--- a/iTennis/en.lproj/iTennisViewController.xib
+++ b/iTennis/en.lproj/iTennisViewController.xib
@@ -36,12 +36,13 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="308467219">
+					<object class="IBUIImageView" id="796726705">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSNextKeyView" ref="1029727103"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="271393316"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -50,12 +51,13 @@
 							<string key="NSResourceName">court.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="799712034">
+					<object class="IBUIImageView" id="127127106">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{139, 217}, {42, 26}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSNextKeyView" ref="631036736"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="135079492"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUIContentMode">1</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -65,39 +67,44 @@
 							<string key="NSResourceName">Ball.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="657698035">
+					<object class="IBUIImageView" id="971100201">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{130, 51}, {60, 5}}</string>
+						<string key="NSFrame">{{130, 20}, {60, 5}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSNextKeyView" ref="241005763"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="860698242"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUIContentMode">1</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<object class="NSCustomResource" key="IBUIImage" id="594428212">
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">Raquet_Yellow.png</string>
+						</object>
+					</object>
+					<object class="IBUIImageView" id="135079492">
+						<reference key="NSNextResponder" ref="774585933"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{130, 430}, {60, 5}}</string>
+						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<int key="IBUIContentMode">1</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">Raquet_Green.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="631036736">
-						<reference key="NSNextResponder" ref="774585933"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{130, 395}, {60, 5}}</string>
-						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSNextKeyView"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<int key="IBUIContentMode">1</int>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<reference key="IBUIImage" ref="594428212"/>
-					</object>
-					<object class="IBUILabel" id="241005763">
+					<object class="IBUILabel" id="860698242">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 128}, {280, 71}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSNextKeyView" ref="799712034"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="127127106"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -113,22 +120,23 @@
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="74070774">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="1038606524">
 							<int key="type">1</int>
 							<double key="pointSize">17</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="536784744">
+						<object class="NSFont" key="IBUIFont" id="72313554">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">17</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUILabel" id="1029727103">
+					<object class="IBUILabel" id="271393316">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{-10, 6}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSNextKeyView" ref="657698035"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="971100201"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -136,7 +144,7 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">0</string>
-						<object class="NSColor" key="IBUITextColor" id="832089464">
+						<object class="NSColor" key="IBUITextColor" id="776984747">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAxIDAAA</bytes>
 						</object>
@@ -144,14 +152,15 @@
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="74070774"/>
-						<reference key="IBUIFont" ref="536784744"/>
+						<reference key="IBUIFontDescription" ref="1038606524"/>
+						<reference key="IBUIFont" ref="72313554"/>
 					</object>
-					<object class="IBUILabel" id="943926926">
+					<object class="IBUILabel" id="778611235">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{-9, 430}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -159,18 +168,19 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">0</string>
-						<reference key="IBUITextColor" ref="832089464"/>
+						<reference key="IBUITextColor" ref="776984747"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="74070774"/>
-						<reference key="IBUIFont" ref="536784744"/>
+						<reference key="IBUIFontDescription" ref="1038606524"/>
+						<reference key="IBUIFont" ref="72313554"/>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="308467219"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="796726705"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MC43NQA</bytes>
@@ -213,41 +223,49 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">ball</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="799712034"/>
+						<reference key="destination" ref="127127106"/>
 					</object>
 					<int key="connectionID">16</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">tapToBegin</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="860698242"/>
+					</object>
+					<int key="connectionID">25</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">racquet_yellow</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="631036736"/>
+						<reference key="destination" ref="971100201"/>
 					</object>
-					<int key="connectionID">17</int>
+					<int key="connectionID">29</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">racquet_green</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="308467219"/>
+						<reference key="destination" ref="135079492"/>
 					</object>
-					<int key="connectionID">18</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">player_score</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="1029727103"/>
-					</object>
-					<int key="connectionID">23</int>
+					<int key="connectionID">30</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">computer_score</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="943926926"/>
+						<reference key="destination" ref="271393316"/>
 					</object>
-					<int key="connectionID">24</int>
+					<int key="connectionID">31</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">player_score</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="778611235"/>
+					</object>
+					<int key="connectionID">32</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -273,49 +291,49 @@
 						<int key="objectID">6</int>
 						<reference key="object" ref="774585933"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="308467219"/>
-							<reference ref="799712034"/>
-							<reference ref="657698035"/>
-							<reference ref="631036736"/>
-							<reference ref="241005763"/>
-							<reference ref="1029727103"/>
-							<reference ref="943926926"/>
+							<reference ref="796726705"/>
+							<reference ref="127127106"/>
+							<reference ref="860698242"/>
+							<reference ref="271393316"/>
+							<reference ref="778611235"/>
+							<reference ref="971100201"/>
+							<reference ref="135079492"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="308467219"/>
+						<reference key="object" ref="796726705"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">12</int>
-						<reference key="object" ref="799712034"/>
+						<reference key="object" ref="127127106"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">13</int>
-						<reference key="object" ref="657698035"/>
+						<reference key="object" ref="971100201"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="631036736"/>
+						<reference key="object" ref="135079492"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">15</int>
-						<reference key="object" ref="241005763"/>
+						<reference key="object" ref="860698242"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">19</int>
-						<reference key="object" ref="1029727103"/>
+						<reference key="object" ref="271393316"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">20</int>
-						<reference key="object" ref="943926926"/>
+						<reference key="object" ref="778611235"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 				</array>
@@ -338,9 +356,54 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">24</int>
+			<int key="maxID">32</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">iTennisViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="ball">UIImageView</string>
+						<string key="computer_score">UILabel</string>
+						<string key="player_score">UILabel</string>
+						<string key="racquet_green">UIImageView</string>
+						<string key="racquet_yellow">UIImageView</string>
+						<string key="tapToBegin">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="ball">
+							<string key="name">ball</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="computer_score">
+							<string key="name">computer_score</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="player_score">
+							<string key="name">player_score</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="racquet_green">
+							<string key="name">racquet_green</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="racquet_yellow">
+							<string key="name">racquet_yellow</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="tapToBegin">
+							<string key="name">tapToBegin</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/iTennisViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -352,6 +415,7 @@
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="Ball.png">{16, 16}</string>
 			<string key="Raquet_Green.png">{65, 5}</string>
+			<string key="Raquet_Yellow.png">{65, 5}</string>
 			<string key="court.png">{320, 480}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1181</string>
